Corrected some mook alignment issues

--- a/less/mook-sheet.less
+++ b/less/mook-sheet.less
@@ -121,14 +121,22 @@
     .mook-weapon {
         display: grid;
         text-align: left;
-        grid-template-columns: 3fr 1fr 1fr;
+        grid-template-columns: 3fr 2fr 1fr;
         grid-template-areas: "mook-weapon-name mook-weapon-mode mook-weapon-rolls";
         .mook-weapon-name {
             grid-area: mook-weapon-name;
             padding-right: 6px;
             text-overflow: ellipsis;
         }
-        .mook-weapon-mode { grid-area: mook-weapon-mode; }
+        .mook-weapon-mode {
+            grid-area: mook-weapon-mode;
+            display: grid;
+            grid-template-columns: 1fr 1fr 1fr;
+            grid-template-areas: "mook-weapon-aim mook-weapon-auto mook-weapon-supp";
+            .mook-weapon-aim { grid-area: mook-weapon-aim; }
+            .mook-weapon-auto { grid-area: mook-weapon-auto; }
+            .mook-weapon-supp { grid-area: mook-weapon-supp; }
+        }
         .mook-weapon-rolls { grid-area: mook-weapon-rolls; }
     }
 
